# readwrite

./: LICENSE  README.md  setup.cfg
src/: dat.py
