[metadata]
name = readwrite-nathancowieson
version = 0.0.1
author = Nathan Cowieson
author_email = nathan.cowieson@diamond.ac.uk
description = Libraries for reading and writing files related to a SAXS experiment
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/nathancowieson/readwrite.git
project_urls =
    Bug Tracker = https://github.com/nathancowieson/readwrite.git/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src